--- a/index.html
+++ b/index.html
@@ -3,10 +3,56 @@
 
 <head>
     <title>Formation JS</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="styles/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Hello world</h1>
+    <div class="container">
+        <h1>Calculateur</h1>
+        <div class="row justify-content-center">
+            <div class="col-6 ">
+                <form id="formcal">
+                    <div class="mb-3">
+                        <label for="principal" class="form-label">Montant</label>
+                        <input type="number" class="form-control" id="principal" value="200000">
+                        <div id="validationPrincipalFeedback" class="invalid-feedback">
+                            Montant invalide
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="years" class="form-label">Années</label>
+                        <input type="number" class="form-control" id="years" value="10">
+                        <div id="validationYearsFeedback" class="invalid-feedback">
+                            Année invalide
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="rate" class="form-label">Taux</label>
+                        <input type="number" class="form-control" id="rate" value="2">
+                        <div id="validationRateFeedback" class="invalid-feedback">
+                            Taux invalide
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Calculer</button>
+                </form>
+
+                <div id="display" style="display: none;">
+                    <h3>Montant par mois: <span id="monthlyPayment"></span> €</h3>
+                    <table class="table table-striped" id="tableMortgage">
+                    </table>
+                </div>
+
+            </div>
+        </div>
+
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
     <script src="dist/main.bundle.js"></script>
 </body>
 
