change input to select

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="rate" class="form-label">Taux</label>
-                        <input type="number" class="form-control" id="rate" value="2">
+                        <!--<input type="number" class="form-control" id="rate" value="2">-->
+                        <select class="form-control" id="rate">
+                            <option value="2">2% (fixe)</option>
+                            <option value="4">4% (fixe)</option>
+                        </select>
                         <div id="validationRateFeedback" class="invalid-feedback">
                             Taux invalide
                         </div>
