--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="styles/style.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+    <script src="dist/main.bundle.js"></script>
 </head>
 
 <body>
     <div class="container">
+        <div>
+            [<a href="/game.html" target="blank">Game</a>]
+        </div>
         <h1>Calculateur</h1>
         <div class="row justify-content-center">
             <div class="col-6 ">
@@ -32,8 +39,8 @@
                         <label for="rate" class="form-label">Taux</label>
                         <!--<input type="number" class="form-control" id="rate" value="2">-->
                         <select class="form-control" id="rate">
-                            <option value="2">2% (fixe)</option>
-                            <option value="4">4% (fixe)</option>
+                            <!--<option value="2">2% (fixe)</option>
+                            <option value="4">4% (fixe)</option>-->
                         </select>
                         <div id="validationRateFeedback" class="invalid-feedback">
                             Taux invalide
@@ -50,14 +57,9 @@
 
             </div>
         </div>
-
-
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
-    <script src="dist/main.bundle.js"></script>
+
 </body>
 
 </html>
